<resources>
    <string name="app_name">EQControl</string>
    <string name="login_name">Nombre de usuario</string>
    <string name="login_pass">Contraseña</string>
    <string name="login_name_tip">Introduce Nombre de Usuario</string>
    <string name="login_pass_tip">Introduce Contraseña</string>
    <string name="button_accept">Aceptar</string>
    <string name="button_cancel">Cancelar</string>
    <string name="new_acount">Crear nueva cuenta</string>
    <string name="welcome">Bienvenido a EQControl</string>

    <string name="title_activity_main">UPVM</string>
    <string name="upvm">UPVM</string>

    <string name="title_activity_register">Registro de Alumno - UPVM</string>
    <string name="user_name">Nombre(s) de Alumno</string>
    <string name="user_name_tip">Introduzca tu nombre(s)</string>
    <string name="ap_paterno">Apellido Paterno</string>
    <string name="ap_paterno_tip">Introduzca tu Apellido Paterno</string>
    <string name="ap_materno">Apellido Materno</string>
    <string name="ap_materno_tip">Introduzca tu Apellido Materno</string>
    <string name="carrera">Carrera</string>
    <string name="carrera_tip">Introduce tu Carrera</string>
    <string name="matricula">Matricula</string>
    <string name="matricula_tip">Introduzca tu Matricula</string>
    <string name="password_register">Contraseña</string>
    <string name="password_register_tip">Introduzca tu Contraseña</string>
    <string name="confirm_password_register">Confirmar Contraseña</string>
    <string name="confirm_password_register_tip">Confirma tu Contraseña</string>

    <string name="date_device">Fecha de Registro</string>
    <string name="date_device_tip">Introduza fecha</string>
    <string name="marca_device">Marca</string>
    <string name="marca_device_tip">Introduza la Marca</string>
    <string name="modelo_device">Modelo</string>
    <string name="modelo_device_tip">Introduzca el Modelo</string>
    <string name="numeroserie_device">Número de Serie</string>
    <string name="numeroserie_device_tip">Introduzca el Número de Serie</string>


    <string name="button_register_device">Registro de Equipos</string>
    <string name="button_consult">Consulta de Equipos</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="Information">Informacion del Alumno</string>

    <string name="format_time">dd/MM/yyyy HH:mm</string>
    <string name="format_email">\@eqcontrol</string>
    <string name="format_email_register">\@eqcontrol.com</string>

    <string name="KEYMAIL">KEY_MAIL</string>
    <string name="Exit_security_toast">Para salir Preciona atras en la barra denavegacion</string>



    <!--Error register values-->
    <string name="required_name">Se requiere un nombre valido</string>
    <string name="required_appaterno">Se requiere un apellido valido</string>
    <string name="required_apmaterno">Se requiere un apellido valido</string>
    <string name="required_carrera">Se requiere una carrera valida</string>
    <string name="required_matricula">Se requiere una matricula valida</string>
    <string name="required_contrasena">Se requiere un contraseña valida</string>
    <string name="required_conficontrasena">Se requiere un contraseña valida</string>
    <string name="validate_conficontrasena">La contraseña no coincide</string>
    <string name="validate_largoconficontrasena">La contraseña debe ser mayor a 6 caracteres</string>

    <string name="required_user">Se requiere un usuario valido</string>
    <string name="required_password">Se requiere un password valido</string>

    <string name="Warning">Aviso</string>
    <string name="Content_dialog">No a sido posible acceder verifique el usuario y contraseña y vuelva a intentar</string>

    <string name="Content_dialog_exit">¿Deseas salir de la aplicacion?</string>


    <!--Array carreras-->
    <string-array name="carreras">
        <item>Informatica</item>
        <item>Telematica</item>
        <item>Mecatronica</item>
    </string-array>

</resources>
